[build-system]
# XXX: If your project needs other packages to build properly, add them to this list.
requires = ["setuptools >= 64"]
build-backend = "setuptools.build_meta"

[project]
name = "pykitPIV"
version = "2024.0.0"
dependencies = [
    "jupyterlab",
    "matplotlib",
    "h5py",
    "torch",
    "pandas",
    "torch",
]
requires-python = ">=3.10"  

authors = [
  {name = "Kamila Zdybał", email = "kamila.zdybal@empa.ch"}
]
maintainers = [
  {name = "Stefan Kunz", email = "stefan.kunz@empa.ch"}
]

description = "synthetic image generation for PIV"
keywords = ["PIV", "synthetic image generation", ]
readme = "README.md"
license = {file = "LICENSE.txt"}


classifiers = [
  "Development Status :: 0",
  "Programming Language :: Python"
]

[project.optional-dependencies]
doc = ["Sphinx",
    "sphinxcontrib-bibtex",
    "furo"
]

[project.urls]
Homepage = "https://gitlab.empa.ch/kamila.zdybal/pykitPIV.git"
Repository = "https://gitlab.empa.ch/kamila.zdybal/pykitPIV.git"

